--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <div class="col-sm-2"><a href="https://instagram.com/emilybritooliveira/"><img src="instagramIcon.png" class="socialIcons"></a></div>
                             <div class="col-sm-2"><a href="https://www.facebook.com/emily.brito.9231"><img src="facebookIcon.png" class="socialIcons"></a></div>
                             <div class="col-sm-2"><a href="https://github.com/emilybtoliveira"><img src="githubIcon.png" class="socialIcons"></a></div>
-                            <div class="col-sm-2"><a><img src="linkedinIcon.png" class="socialIcons"></a></div>
+                            <div class="col-sm-2"><a href=""><img src="linkedinIcon.png" class="socialIcons"></a></div>
                             <div class="col-sm-2"><a href="https://mailto:emilybtoliveira@gmail.com"><img src="emailIcon.png" class="socialIcons"></a></div>
                         </div>
                     </div>
@@ -74,22 +74,39 @@
                         <div class="col-md-6">
                             <h4>Interesses e experiência</h4>
                             <ul>
-                                <li>muitos nada. 2016</li>
-                                <li>outros nada. 2017</li>
-                                <li>novos nada. 2018</li>
-                                <li>mais nada sendo de maior. 2019</li>
+                                <li>dormir</li>
+                                <li>comer</li>
+                                <li>fazer raiva</li>
+                                <li>stress</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <h4>Educação Formal</h4>
-                            <ul>
-                                    <li>Comendo areia e assistindo backyardigans, 2006<p class="listItem">Creche qualquer</p></li>
-                                    <li>Fazendo nada<p class="listItem">Creche na FB, 2016</p></li>
-                                    <li>Não vou nem comentar<p class="listItem">Instituto Federal de Educação, Ciência e Tecnologia de Alagoas 2019</p></li>
-                                    <li>SÓ DEUS<p class="listItem">só Deus sabe, só Deus sabe</p></li>
-                                </ul>
+                            <ul id="educacaoUl">
+                                <li>Comendo areia e assistindo backyardigans, 2006<p class="listItem">Creche qualquer</p></li>
+                                <li>Fazendo nada<p class="listItem">Creche na FB, 2016</p></li>
+                                <li>Não vou nem comentar<p class="listItem">Instituto Federal de Educação, Ciência e Tecnologia de Alagoas 2019</p></li>
+                                <li>SÓ DEUS<p class="listItem">só Deus sabe, só Deus sabe</p></li>
+                            </ul>
                         </div>
                     </div>
+                </div>
+            </div>
+
+        </div>       
+        <!-- Publicações -->
+        <div class="publicacoesDiv">
+            <div class="row">
+                <div class="col-md-4">
+                    <h1>Publicações</h1>
+                </div>
+                <div class="col align-self-end">
+                    <ul id="publicacoesUl">
+                        <li>muitos nada. 2016 muitos nada. 2016 muitos nada. 2016 muitos nada. 2016 muitos nada. 2016</li>
+                        <li>outros nada. 2017</li>
+                        <li>novos nada. 2018</li>
+                        <li>mais nada sendo de maior. 2019</li>
+                    </ul>
                 </div>
             </div>
         </div>
