--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#biografia">nada aqui</a>
+                            <a class="nav-link" href="#biografia">Início</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#publicacoes">aqui tbm nao</a>
+                            <a class="nav-link" href="#publicacoes">Publicações</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#projetos">nadica</a>
+                            <a class="nav-link" href="#projetos">Projetos</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#hobbies">aqui tem</a>
+                            <a class="nav-link" href="#hobbies">Hobbies</a>
                         </li>
                     </ul>
                 </div>
@@ -147,6 +147,8 @@
                 </div>
             </div>
         </div>
-        
+
+    <!-- <footer>Prof, me passa aí na humildade s2</footer>    -->
+
     </body>
 </html>
