edit das informações e adição dos atividades

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="style.css">        
+        <link rel="stylesheet" href="style.css">     
+        <title>Emily Oliveira</title>   
     </head>
     <body>
         <!--NavBar-->
@@ -35,6 +36,11 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <a class="nav-link" href="#atividades">Atividades Acadêmicas</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
                             <a class="nav-link" href="#hobbies">Hobbies</a>
                         </li>
                     </ul>
@@ -48,10 +54,10 @@
             
                 <div class="row">
                     <div class="col">
-                        <img src="https://pbs.twimg.com/profile_images/710844355452522496/gOAhmKxr_400x400.jpg" class="imgIcon">
+                        <img src="profile.png" class="imgIcon">
                         <div>
                             <h3>Emily Oliveira</h3>
-                            <h6>Não faço nada da vida nao</h6>
+                            <h5 style="color: grey;">Instituto Federal de Alagoas</h5>
                         </div>
                         <div class="row socialGroup">
                             <div class="col-sm-2"><a href="https://instagram.com/emilybritooliveira/"><img src="instagramIcon.png" class="socialIcons"></a></div>
@@ -82,21 +88,34 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="col-md-6">
-                            <h4>Interesses e experiência</h4>
+                            <h4>Experiência e Conhecimentos Gerais</h4>
                             <ul>
-                                <li>dormir</li>
-                                <li>comer</li>
-                                <li>fazer raiva</li>
-                                <li>stress</li>
+                                <li>Manutenção de computadores</li>
+                                <li>Redes</li>
+                                <li>Linguagens de programação:</li>
+                                    <ul>
+                                        <li>Java</li>
+                                        <li>Python</li>
+                                        <li>PHP</li>
+                                        <li>Scratch</li>
+                                    </ul>
+                                <li>Frameworks:</li>
+                                    <ul>
+                                        <li>Reactjs</li>
+                                        <li>Laravel</li>                                    
+                                    </ul>
+                                <li>Desenvolvimento de aplicações Web</li>
+                                <li>Lingua Entrangeira:</li>
+                                    <ul>
+                                        <li>Inglês</li>
+                                    </ul>   
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <h4>Educação Formal</h4>
                             <ul id="educacaoUl">
-                                <li>Comendo areia e assistindo backyardigans<p class="listItem">Creche qualquer, 2006</p></li>
-                                <li>Fazendo nada<p class="listItem">Creche na FB, 2016</p></li>
-                                <li>Não vou nem comentar<p class="listItem">Instituto Federal de Educação, Ciência e Tecnologia de Alagoas, 2019</p></li>
-                                <li>SÓ DEUS<p class="listItem">só Deus sabe, só Deus sabe</p></li>
+                                <li>Cursando médio técnico de Informática para Internet<p class="listItem">Instituto Federal de Alagoas, 2019</p></li>
+                                <li>SÓ DEUS SABE O QUE<p class="listItem">só Deus sabe onde, só Deus sabe quando</p></li>
                             </ul>
                         </div>
                     </div>
@@ -118,17 +137,31 @@
             </div>
         </div>
 
-        <!-- Projetos-->
+        <!-- Projetos -->
         <div class="projetosDiv" id="projetos">
             <div class="row">
                 <div class="col-md-4">
                     <h1>Projetos</h1>
                 </div>
                 <div class="col align-self-end">
-                    <ul>
-                        <li>monitoria, 2017</li>                    
-                        <li>extensao, 2018</li>
-                        <li>extensao, 2019</li>
+                    <ul>                                         
+                        <li>Projeto de Extensão -  Code Club Maceió, 2018</li>
+                        <li>Projeto de Extensão -  Code Club Maceió, 2019</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Atividades Acadêmicas -->
+        <div class="atvacaDiv" id="atividades">
+            <div class="row">
+                <div class="col-md-4">
+                    <h1>Atividades Acadêmicas</h1>
+                </div>
+                <div class="col align-self-end">
+                    <ul>                                         
+                        <li>Monitoria -  Coordenação de Biologia, 2017</li>
+                        <li>Congresso Acadêmico do Ifal, 2018</li>
                     </ul>
                 </div>
             </div>
@@ -142,13 +175,21 @@
                 </div>
                 <div class="col align-self-end">
                     <ul>
-                        <li>NaO gOsTo dE nAda</li>
+                        <li>Assistir filmes diversos</li>
+                        <li>Fotografar</li>
+                        <li>Cozinhar</li>
+                        <li>Cuidar de crianças</li>
+                        <li>Descobrir bandas e artistas não tão populares</li>
+                        <li>Aprender diferentes conteúdos através de livros e páginas na internet</li>
+                        <li>Fazer planilhas</li>
+                        <li>Organizar coisas</li>
+                        <li>Viajar</li>
                     </ul>
                 </div>
             </div>
         </div>
 
-    <!-- <footer>Prof, me passa aí na humildade s2</footer>    -->
+    <footer>Prof, me passa aí na humildade s2</footer>   
 
     </body>
 </html>
