--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
         </div>
 
-    <footer>Prof, me passa aí na humildade s2</footer>   
+    <!-- <footer>Prof, me passa aí na humildade s2</footer>   -->
 
     </body>
 </html>
