--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p>Bem vindo! Meu nome é Emily, moro na cidade de Maceió (Brasil) 
                             e sou uma estudante do curso técnico de Informática no Instituto Federal do meu estado.
                             Trabalho com algumas ferramentas e aplicações que tenho aprendido durante o curso e também
-                            desenvolvo alguns projetos que as conciliam com meus hobbies.</p>
+                            desenvolvo alguns projetos que conciliam esses conhecimentos com meus hobbies.</p>
                         <br><p>Essa página tem o objetivo de mostrar um pouco das coisas das quais participei e aprendi
                             na minha vida acadêmica até então, além de algumas informações adicionais sobre mim. Caso 
                             queira entrar em contato, confere os meios que coloquei nos ícones :)
