--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                                         <li>Java</li>
                                         <li>Python</li>
                                         <li>PHP</li>
-                                        <li>Scratch</li>
                                     </ul>
                                 <li>Frameworks:</li>
                                     <ul>
@@ -114,8 +113,7 @@
                         <div class="col-md-6">
                             <h4>Educação Formal</h4>
                             <ul id="educacaoUl">
-                                <li>Cursando médio técnico de Informática para Internet<p class="listItem">Instituto Federal de Alagoas, 2019</p></li>
-                                <li>SÓ DEUS SABE O QUE<p class="listItem">só Deus sabe onde, só Deus sabe quando</p></li>
+                                <li>Médio técnico de Informática para Internet<p class="listItem">Instituto Federal de Alagoas, 2016-2019</p></li>
                             </ul>
                         </div>
                     </div>
