--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                                         <li>Java</li>
                                         <li>Python</li>
                                         <li>PHP</li>
+                                        <li>C</li>
                                     </ul>
                                 <li>Frameworks:</li>
                                     <ul>
@@ -114,6 +115,9 @@
                             <h4>Educação Formal</h4>
                             <ul id="educacaoUl">
                                 <li>Médio técnico de Informática para Internet<p class="listItem">Instituto Federal de Alagoas, 2016-2019</p></li>
+                            </ul>
+                            <ul id="educacaoUl">
+                                <li>Graduanda em Ciência da Computação<p class="listItem">Universidade Federal de Alagoas, 2020-</p></li>
                             </ul>
                         </div>
                     </div>
