--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="col-sm-2"><a href="https://instagram.com/emilybritooliveira/"><img src="instagramIcon.png" class="socialIcons"></a></div>
                             <div class="col-sm-2"><a href="https://www.facebook.com/emily.brito.9231"><img src="facebookIcon.png" class="socialIcons"></a></div>
                             <div class="col-sm-2"><a href="https://github.com/emilybtoliveira"><img src="githubIcon.png" class="socialIcons"></a></div>
-                            <div class="col-sm-2"><a href=""><img src="linkedinIcon.png" class="socialIcons"></a></div>
+                            <div class="col-sm-2"><a href="https://www.linkedin.com/in/emily-oliveira-212933203"><img src="linkedinIcon.png" class="socialIcons"></a></div>
                             <div class="col-sm-2"><a href="https://mailto:emilybtoliveira@gmail.com"><img src="emailIcon.png" class="socialIcons"></a></div>
                         </div>
                     </div>
